Add click handler to pay with card button

--- a/primer-sdk-android/src/main/res/layout/pm_credit_card_layout.xml
+++ b/primer-sdk-android/src/main/res/layout/pm_credit_card_layout.xml
@@ -1,26 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout
+    android:id="@+id/card_preview_button"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/Primer.PaymentMethod.Preview"
     android:clickable="true"
-    android:focusable="true" >
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-        <ImageView
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/primer_text_word_spacing"
-            android:src="@drawable/credit_card_icon"/>
-        <TextView
-            android:layout_gravity="center"
-            style="@style/Primer.Text"
-            android:text="Pay With Card"
-            />
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:focusable="true"
+    android:gravity="center"
+    >
+    <TextView
+        style="@style/Primer.Text"
+        android:layout_gravity="center"
+        android:text="Pay with card"
+        android:drawablePadding="10dp"
+        app:drawableStartCompat="@drawable/credit_card_icon"
+        />
+</FrameLayout>
