--- a/primer-sdk-android/src/main/res/values/dimens.xml
+++ b/primer-sdk-android/src/main/res/values/dimens.xml
@@ -9,6 +9,9 @@
     <item name="primer_border_width" type="dimen">1dp</item>
     <item name="primer_list_margin" type="dimen">13dp</item>
 
+<!--  Forms  -->
+    <item name="primer_input_height" type="dimen">34dp</item>
+
 <!--  Text stuff  -->
     <item name="primer_text_size_title" type="dimen">20sp</item>
     <item name="primer_text_size_detail" type="dimen">18sp</item>
