Fix bblack backgrounnd on dialog

--- a/primer-sdk-android/src/main/res/layout/fragment_select_payment_method.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_select_payment_method.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:animateLayoutChanges="true"
     >
     <io.primer.android.ui.SelectPaymentMethodTitle
         android:id="@+id/primer_sheet_title_layout"
