--- a/primer-sdk-android/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_bottom_sheet.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/checkout_sheet_content"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="@dimen/primer_checkout_sheet_padding_vert"
-    android:paddingBottom="@dimen/primer_checkout_sheet_padding_vert"
-    android:paddingLeft="@dimen/primer_checkout_sheet_padding_horiz"
-    android:paddingRight="@dimen/primer_checkout_sheet_padding_horiz"
+    android:background="@android:color/white"
     >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/checkout_sheet_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/primer_checkout_sheet_padding_vert"
+        android:paddingBottom="@dimen/primer_checkout_sheet_padding_vert"
+        android:paddingLeft="@dimen/primer_checkout_sheet_padding_horiz"
+        android:paddingRight="@dimen/primer_checkout_sheet_padding_horiz"
+        >
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
