--- a/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
@@ -11,7 +11,7 @@
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Primer.FormInput.Layout"
         android:id="@+id/card_form_cardholder_name"
-        android:hint="@string/card_holder_name_hint"
+        android:hint="@string/card_holder_name"
         >
         <com.google.android.material.textfield.TextInputEditText
             android:theme="@style/Primer.FormInput.Input"
@@ -33,7 +33,7 @@
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Primer.FormInput.Layout"
         android:id="@+id/card_form_card_number"
-        android:hint="@string/card_number_hint"
+        android:hint="@string/card_number"
         >
         <com.google.android.material.textfield.TextInputEditText
             android:theme="@style/Primer.FormInput.Input"
@@ -62,7 +62,7 @@
             android:id="@+id/card_form_card_expiry"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:hint="@string/card_expiry_hint"
+            android:hint="@string/card_expiry"
             >
             <com.google.android.material.textfield.TextInputEditText
                 android:theme="@style/Primer.FormInput.Input"
@@ -85,7 +85,7 @@
             android:id="@+id/card_form_card_cvv"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:hint="@string/card_cvv_hint"
+            android:hint="@string/card_cvv"
             >
             <com.google.android.material.textfield.TextInputEditText
                 android:theme="@style/Primer.FormInput.Input"
