--- a/primer-sdk-android/src/main/res/layout/vaulted_payment_method_card.xml
+++ b/primer-sdk-android/src/main/res/layout/vaulted_payment_method_card.xml
@@ -1,6 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:background="@android:color/white"
+    android:clipChildren="true"
+    >
+    <ImageView
+        android:id="@+id/item_icon_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/credit_card_icon"
+        android:background="@drawable/icon_button"
+        android:scaleType="fitCenter"
+        />
+    <LinearLayout
+        android:id="@+id/item_content_layout"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/list_item_normal"
+        android:paddingStart="16dp"
+        android:paddingEnd="11dp"
+        android:layout_marginBottom="6dp"
+        >
+        <TextView
+            android:id="@+id/item_description"
+            style="@style/Primer.Text.Small"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Mastercard 1234"
+            />
+        <Button
+            android:id="@+id/item_delete_button"
+            style="@style/Primer.Button.Text.Danger"
+            android:background="@android:color/transparent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/delete"
+            android:gravity="center_vertical|end"
+            />
+    </LinearLayout>
+</LinearLayout>
