--- a/primer-sdk-android/src/main/res/values/colors.xml
+++ b/primer-sdk-android/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primer_border_color">#FFBEC2C4</color>
+    <color name="primer_underline_color">#6B000000</color>
     <color name="primer_text_color_default">@android:color/black</color>
     <color name="primer_input_placeholder">#8A000000</color>
     <color name="primer_app_primary">#2C98F0</color>
+    <color name="primer_app_danger">#FFEB001B</color>
 
     <color name="primer_button_primary">@color/primer_app_primary</color>
     <color name="primer_button_primary_fg">@android:color/white</color>
