Add proper card and expiry date validation + masking

--- a/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
@@ -37,6 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
+            android:digits="0123456789 "
             android:imeOptions="actionNext"
             />
     </com.google.android.material.textfield.TextInputLayout>
