Refactor input masks. fix deleting characters in card numbers

--- a/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
@@ -90,6 +90,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:imeOptions="actionDone"
+                android:maxLength="4"
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
