--- a/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
@@ -105,15 +105,42 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         >
-        <Button
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            style="@style/Widget.AppCompat.Button"
             android:id="@+id/card_form_submit_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/primer_button_primary_fg"
             android:background="@drawable/button_primary_bg"
             android:elevation="@dimen/primer_button_elevation"
             android:paddingEnd="@dimen/primer_button_padding_horiz"
-            android:paddingStart="@dimen/primer_button_padding_horiz" />
+            android:paddingStart="@dimen/primer_button_padding_horiz"
+            android:animateLayoutChanges="true"
+            android:layout_gravity="center"
+            >
+            <TextView android:id="@+id/card_form_submit_button_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:textColor="@color/primer_button_primary_fg"
+                />
+
+            <ProgressBar
+                android:theme="@style/Theme.AppCompat.PrimerUniversalCheckout.WhiteAccent"
+                android:id="@+id/card_form_submit_button_loading"
+                android:layout_width="22dp"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/card_form_submit_button_txt"
+                android:visibility="gone"
+                android:layout_marginStart="6dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/card_form_submit_button_txt"
+                app:layout_constraintTop_toTopOf="parent"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
 </LinearLayout>
